--- a/index.html
+++ b/index.html
@@ -1,5 +1,130 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Wendy Chen's Portfolio</title>
 
-{% include {{ site.theme-home }} %}
+  <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/js/mdb.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Courgette|Lobster|Playfair+Display:700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.7.1/css/mdb.min.css" rel="stylesheet">
+
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+  <link href="css/index.css" rel="stylesheet">
+  <script>
+
+    $(document).ready(function() {
+      $('a[href*="#"]').on('click', function (e) {
+        e.preventDefault();
+
+        $('html, body').animate({
+          scrollTop: $($(this).attr('href')).offset().top
+        }, 500, 'linear');
+      });
+    });
+    $(function() {
+      AOS.init();
+    });
+
+  </script>
+  <style>
+    .imglinks {
+      border-radius: 100%; margin: 50px
+    }
+    .imglinks:hover {
+      border: 3px solid pink;
+    }
+    .icon {
+      float: left;
+      margin-right: 20px;
+    }
+    .itext {
+
+      font-size: 20px;
+      text-align: left;
+    }
+  </style>
+</head>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
+  <div class="container">
+    <div style="font-family: 'Courgette', cursive; font-size: 45px" class="navbar-brand fade-in one">
+      Wendy Chen</div>
+    <!--<a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>-->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse fade-in two" id="navbarResponsive">
+      <ul class="smooth-scroll navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+      </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<br><br><br>
+<div id="about" class="jumbotron">
+  <div class="text-container">
+    <span class="stext">H</span>
+    <span class="stext">i</span>
+    <span class="stext">&nbsp;</span>
+    <span class="stext">T</span>
+    <span class="stext">h</span>
+    <span class="stext">e</span>
+    <span class="stext">r</span>
+    <span class="stext">e</span>
+    <span class="stext">!</span>
+  </div>
+  <h1 data-aos="fade-up" data-aos-duration="1000" class="display-4">My Name is Wendy!</h1>
+  <div class="text-body">
+    <p data-aos="fade-up"
+       data-aos-duration="2000">I am a senior undergraduate student at The University of Hawaii at Manoa majoring in Computer  Science. Soon, I will be a college graduate in Spring 2019! When I am not working on websites, I spend my time working on a flower farm, playing video games, and enjoying food. Hopefully after graduating, I can utilize my Computer Science major in jobs concerning software engineering and web development in Hawaii. Currently, I am the web designer for the UH Manoa Insect Museum and Rubinoff Lab, check them out below! </p>
+  </div>
+<center>
+  <a href="https://www.ctahr.hawaii.edu/insectmuseum/index.htm"><img class="imglinks" width="300px" src="https://i.gyazo.com/056f81bbf4e7434be332164a8df6afbd.png"></a>
+  <a href="https://www.ctahr.hawaii.edu/rubinoffd/index.htm"><img class="imglinks" width="300px" src="https://i.gyazo.com/61636c92f6394c9cfb238a97d86763e0.png"></a>
+</center>
+</div>
+
+<div id="info">
+
+</div>
+
+
+<div id="contact" class="container">
+  <h2 data-aos="fade-down" data-aos-duration="2000">Feel free to contact me!</h2>
+  <img class="icon" width="50px" src="https://png.pngtree.com/svg/20170707/a771b2139e.svg"><p class="itext">wchen9@hawaii.edu</p>
+
+  <img class="icon" width="50px" src="https://png.pngtree.com/svg/20170401/contact_us_circle_538815.png"><p class="itext">808-382-0462</p>
+  <a href="https://www.linkedin.com/in/wendy-chen-326748146/"><img class="icon" width="50px" src="https://image.flaticon.com/icons/svg/34/34227.svg"><p class="itext">LinkedIn</p></a>
+  <a href="Current%20Resume.pdf"><img class="icon" width="50px" src="http://icons.iconarchive.com/icons/custom-icon-design/mono-general-2/256/document-icon.png"><p class="itext">Resume</p></a>
+
+
+</div>
+<br>
+<center>
+<div id="footer">
+  © 2019 Wendy Chen
+</div>
+</center>
+</body>
+</html>
