--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav">
   <div class="container">
-    
+
     <!--<a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -96,7 +96,7 @@
   <h1 data-aos="fade-up" data-aos-duration="1000" class="display-4">My Name is Wendy!</h1>
   <div class="text-body">
     <p data-aos="fade-up"
-       data-aos-duration="2000">I am a senior undergraduate student at The University of Hawaii at Manoa majoring in Computer  Science. Soon, I will be a college graduate in Spring 2019! When I am not working on websites, I spend my time working on a flower farm, playing video games, and enjoying food. Hopefully after graduating, I can utilize my Computer Science major in jobs concerning software engineering and web development in Hawaii. Currently, I am the web designer for the UH Manoa Insect Museum and Rubinoff Lab, check them out below! </p>
+       data-aos-duration="2000">I'm a recently graduated student from the University of Hawaii at Manoa. I graduated with a B.S. in Computer Science! When I am not working on websites, I spend my time working on a flower farm, playing video games, and enjoying food. Previously, I was the web designer for the UH Manoa Insect Museum and Rubinoff Lab, check them out below! </p>.
   </div>
 <center>
   <a href="https://www.ctahr.hawaii.edu/insectmuseum/index.htm"><img class="imglinks" width="300px" src="https://i.gyazo.com/056f81bbf4e7434be332164a8df6afbd.png"></a>
@@ -110,7 +110,7 @@
 
 
 <div id="contact" class="container">
-  <h2 data-aos="fade-down" data-aos-duration="2000">Feel free to contact me!</h2>
+  <h2 data-aos="fade-down" data-aos-duration="2000">Contact Info</h2>
   <img class="icon" width="50px" src="https://png.pngtree.com/svg/20170707/a771b2139e.svg"><p class="itext">wchen9@hawaii.edu</p>
 
   <img class="icon" width="50px" src="https://png.pngtree.com/svg/20170401/contact_us_circle_538815.png"><p class="itext">808-382-0462</p>
